--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ h6 {
   background-color: #60912e;
   padding: 8px 16px;
   font-weight: bold;
+  text-align: center;
   color: #fff;
   font-size: 25px!important;
   text-transform: uppercase;
