--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,9 +147,7 @@ h6 {
 
 @media (max-width: 768px) {
   #header.header-scrolled {
-    
-    position: -webkit-sticky; /* Necessário para funcionar no Safari */
-    position: sticky;
+    padding: 10px 0;
     
   }
 
